@@ -83,6 +83,14 @@
   <launchable type="desktop-id">org.gnome.Calculator.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="46~beta" date="2024-02-11" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 46.beta</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="46~alpha" date="2024-01-06" type="development">
       <description>
         <p>Overview of changes in gnome-calculator 46.alpha</p>
