@@ -1,3 +1,6 @@
+Overview of changes in gnome-calculator 46.beta
+    * Updated translations
+
 Overview of changes in gnome-calculator 46.alpha
     * Updated translations
     * Allow substring search in the unit selection drop-downs #338 (Lukáš Tyrychtr)
